<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
         android:layout_width="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            >

    <!--    android:layout_marginStart="30dp"-->
        <TextView
                android:text="@string/settings_interval"
                android:textSize="20sp"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/interval_text"
                android:layout_weight="3" />

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@string/settings_default_interval"
                android:id="@+id/interval_field"
                android:layout_weight="5" />

        <TextView
                android:text="@string/settings_ms"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:textSize="20sp"
                android:id="@+id/ms_text"
                android:layout_weight="1" />
    <!--    android:layout_marginEnd="30dp"-->
    </LinearLayout>
</RelativeLayout>