<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/root"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/text"
            android:text="AAAAAAAAAAAAAAAAAAaaa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

    <Button
            android:text="@string/start_button"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:id="@+id/start"
            android:layout_marginTop="150dp"
            android:layout_centerHorizontal="true"
            />
    <Button
            android:text="@string/close_button"
            android:layout_below="@id/start"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:id="@+id/close"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            />

    <Button
            android:text="@string/settings_title"
            android:layout_below="@id/close"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:id="@+id/settings"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true" />

    <Button
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/close"
            android:text="@string/acc_perm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/acces_perm"
            android:visibility="gone"
            />

<!--    <include-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_below="@id/close"-->
<!--            layout="@layout/settings"-->
<!--            android:id="@+id/settings" />-->


</RelativeLayout>